feat: 'feat: Add stories for Storybook'

--- a/src/widgets/footer/ui/styles.module.css
+++ b/src/widgets/footer/ui/styles.module.css
@@ -1,6 +1,6 @@
 .footer__wrapper {
     box-sizing: border-box;
-    width: 100%;
+    width: 1440px;
     height: 345px;
     background-color: #EAEAEA;
     display: flex;
