feat: 'feat/fix: Изменены заголовки, добавлен компонент статей'

--- a/src/widgets/bannerPurchases/ui/styles.module.css
+++ b/src/widgets/bannerPurchases/ui/styles.module.css
@@ -1,23 +1,10 @@
 .purchases__wrapper {
     display: flex;
     margin-top: 130px;
-    justify-content: center;
+    justify-content: space-between;
     width: 1248px;
     height: 600px;
     border-bottom: 1px solid #CBCBCB;
-}
-
-.purchases__title {
-    width: 500px;
-    font-family: Poppins, sans-serif;
-    font-weight: 600;
-    font-size: 51px;
-    line-height: 58px;
-    padding-right: 50px;
-
-    span {
-        color: #6C5FBC;
-    }
 }
 
 .purchases__info {
