--- a/src/app/App.css
+++ b/src/app/App.css
@@ -8,6 +8,46 @@
     src: local('Poppins'), url("../shared/fonts/poppins/Poppins-Medium.ttf");
 }
 
+h1 {
+    padding: 0;
+    margin: 0;
+    font-family: Poppins, sans-serif;
+    font-size: 75px;
+    letter-spacing: -3px;
+    line-height: 120%;
+    font-weight: 600;
+
+    span {
+        color: #6C5FBC;
+    }
+}
+
+h2 {
+    padding: 0;
+    margin: 0;
+    width: 500px;
+    font-family: Poppins, sans-serif;
+    font-weight: 600;
+    font-size: 51px;
+    line-height: 58px;
+
+    span {
+        color: #6C5FBC;
+    }
+}
+
+h3 {
+    margin: 0;
+    padding: 0;
+    font-family: Poppins, sans-serif;
+    font-size: 45px;
+    font-weight: 500;
+
+    span {
+        color: #6C5FBC;
+    }
+}
+
 .App {
     width: 1440px;
     display: flex;
