--- a/src/entities/question/ui/styles.module.css
+++ b/src/entities/question/ui/styles.module.css
@@ -1,4 +1,9 @@
 .question__summary {
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
         font-family: Poppins, sans-serif;
         font-size: 23px;
         line-height: 60px;
@@ -19,7 +24,6 @@
         background: url('./static/Plus.svg') no-repeat;
         background-size: cover;
         margin-left: .75em;
-        transition: 0.2s;
 }
 
 .question__details {
@@ -37,6 +41,5 @@
         height: 32px;
         background-size: cover;
         margin-left: .75em;
-        transition: 0.2s;
         background: url('./static/minus.svg') no-repeat;
 }
