--- a/src/widgets/bannerEnjoy/ui/enjoyBlock/styles.module.css
+++ b/src/widgets/bannerEnjoy/ui/enjoyBlock/styles.module.css
@@ -12,7 +12,7 @@
     margin-bottom: 50px;
     line-height: 28px;
     font-family: "Inter", sans-serif;
-    font-weight: lighter;
+    font-weight: 300;
     font-size: 18px;
     width: 490px;
     color: #676767;
