--- a/src/widgets/bannerQuality/ui/styles.module.css
+++ b/src/widgets/bannerQuality/ui/styles.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 50px;
     width: 1260px;
     height: 745px;
     border-bottom: 1px solid #CBCBCB;
