--- a/src/widgets/articles/pagination/ui/styles.module.css
+++ b/src/widgets/articles/pagination/ui/styles.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1248px;
+    width: 100%;
 }
 
 .articles__cards {
