--- a/src/widgets/bannerPurchases/ui/styles.module.css
+++ b/src/widgets/bannerPurchases/ui/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     margin-top: 130px;
     justify-content: space-between;
-    width: 1248px;
+    width: 100%;
     height: 600px;
     border-bottom: 1px solid #CBCBCB;
 }
