--- a/src/widgets/bannerQuality/ui/styles.module.css
+++ b/src/widgets/bannerQuality/ui/styles.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 50px;
-    width: 1260px;
+    width: 100%;
     height: 745px;
     border-bottom: 1px solid #CBCBCB;
 }
