--- a/src/widgets/lunchTop/ui/styles.module.css
+++ b/src/widgets/lunchTop/ui/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1248px;
+    width: 100%;
     height: 640px;
     margin-top: 100px;
     border-bottom: 1px solid #CBCBCB;
