feat: 'fix: Сделана адаптивность '

--- a/src/entities/comment/item/styles.module.css
+++ b/src/entities/comment/item/styles.module.css
@@ -12,6 +12,10 @@
     justify-content: space-between;
 }
 
+.comments__wrapper {
+    width: 1440px;
+}
+
 .comment__username {
     font-family: Poppins-Medium, sans-serif;
     font-size: 21px;
@@ -26,4 +30,11 @@
     line-height: 26px;
     font-size: 18px;
     color: #636363;
+}
+
+@media screen and (max-width: 768px) {
+    .comments__wrapper {
+        width: 768px;
+    }
+
 }
