--- a/src/entities/question/ui/styles.module.css
+++ b/src/entities/question/ui/styles.module.css
@@ -43,3 +43,13 @@
         margin-left: .75em;
         background: url('./static/minus.svg') no-repeat;
 }
+
+@media screen and (max-width: 768px) {
+        .question__summary {
+                width: 700px;
+        }
+        .question__details {
+                width: 700px;
+        }
+
+}
