--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -4,3 +4,11 @@
     padding: 45px 0;
     border-bottom: 1px solid #CBCBCB;
 }
+
+@media screen and (max-width: 768px) {
+    .header__wrapper {
+        width: 768px;
+        justify-content: space-around;
+    }
+
+}
