--- a/src/app/styles/App.css
+++ b/src/app/styles/App.css
@@ -77,3 +77,14 @@ h5 {
     justify-content: center;
     background-color: #F9F9F9;
 }
+
+@media screen and (max-width: 768px) {
+    .App {
+        width: 768px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+}
