--- a/src/widgets/bannerQuality/ui/styles.module.css
+++ b/src/widgets/bannerQuality/ui/styles.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     margin-top: 50px;
     width: 100%;
-    height: 745px;
+    min-height: 745px;
     border-bottom: 1px solid #CBCBCB;
 }
 
@@ -12,4 +12,14 @@
     width: 370px;
     height: 625px;
     margin-left: 100px;
+}
+
+@media screen and (max-width: 768px) {
+    .banner__wrapper {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        padding-bottom: 100px;
+    }
+
 }
