--- a/src/widgets/customerSay/ui/styles.module.css
+++ b/src/widgets/customerSay/ui/styles.module.css
@@ -6,3 +6,11 @@
     align-items: center;
     flex-direction: column;
 }
+
+@media screen and (max-width: 768px) {
+    .customer__wrapper {
+        width: 768px;
+        margin: 80px 0;
+    }
+
+}
