--- a/src/widgets/lunchTop/ui/styles.module.css
+++ b/src/widgets/lunchTop/ui/styles.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 640px;
+    min-height: 640px;
     margin-top: 100px;
     border-bottom: 1px solid #CBCBCB;
 
@@ -35,4 +35,13 @@
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .recipes__main {
+        flex-direction: column;
+        padding-bottom: 100px;
+        gap: 50px;
+    }
+
 }
