feat: 'fix: Сделана адаптивность '

--- a/src/widgets/footer/ui/styles.module.css
+++ b/src/widgets/footer/ui/styles.module.css
@@ -10,7 +10,7 @@
 }
 
 .footer__main {
-    width: 100%;
+    width: 1250px;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #818181;
@@ -19,7 +19,7 @@
 
 .footer__social {
     margin-top: 57px;
-    width: 100%;
+    width: 1250px;
     display: flex;
     justify-content: space-between;
 }
@@ -42,9 +42,11 @@
         width: 768px;
     }
     .footer__main {
+        width: 768px;
         justify-content: space-around;
     }
     .footer__social {
+        width: 768px;
         justify-content: space-around;
     }
 }
