--- a/src/entities/recipe/item/ui/styles.module.css
+++ b/src/entities/recipe/item/ui/styles.module.css
@@ -72,6 +72,7 @@
         font-family: Poppins, sans-serif;
         font-size: 26px;
         margin-left: 33px;
+        line-height: 33px;
     }
 
     img {
