--- a/src/widgets/bannerFeature/ui/styles.module.css
+++ b/src/widgets/bannerFeature/ui/styles.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1440px;
+    width: 100%;
     height: 220px;
     background-image: url("../static/BG.png");
 }
