--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -1,6 +1,6 @@
 .header__wrapper {
     display: flex;
-    width: 1248px;
+    width: 90%;
     padding: 45px 0;
     border-bottom: 1px solid #CBCBCB;
 }
