--- a/src/widgets/articles/fullArticle/ui/styles.module.css
+++ b/src/widgets/articles/fullArticle/ui/styles.module.css
@@ -2,7 +2,7 @@
     padding-top: 125px;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
 }
 
 .article__author {
@@ -14,11 +14,11 @@
 .author__info {
     display: flex;
     align-items: center;
+}
 
-    img {
-        width: 55px;
-        height: 55px;
-    }
+.author__avatar {
+    width: 45px;
+    height: 45px;
 }
 
 .author__name {
@@ -29,7 +29,7 @@
 
     p {
         display: block;
-        height: 17px;
+        height: 12px;
         margin: 0;
         padding: 0;
         font-family: Poppins, sans-serif;
@@ -85,13 +85,21 @@
     }
 }
 
+.article__button:hover {
+    background-color: #6C5FBC;
+    color: #F9F9F9;
+
+    svg path {
+        stroke: #F9F9F9;
+    }
+}
+
 .author__comments {
+    margin-top: 100px;
     margin-bottom: 120px;
     display: flex;
     flex-direction: column;
     gap: 120px;
-    justify-content: center;
-    align-items: center;
 }
 
 @media screen and (max-width: 768px) {
