--- a/src/shared/ui/button/ui/styles.css
+++ b/src/shared/ui/button/ui/styles.css
@@ -12,6 +12,7 @@
 }
 
 .custom-button.primary {
+    transition: all .3s;
     background-color: #6C5FBC;
     color: #F9F9F9;
 }
@@ -22,16 +23,18 @@
 }
 
 .custom-button.light {
+    transition: all .3s;
     background-color: #F9F9F9;
     color: #6C5FBC;
 }
 
-.custom-button.light {
+.custom-button.light:hover {
     background-color: #6C5FBC;
     color: #F9F9F9;
 }
 
 .custom-button.direct {
+    transition: all .3s;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,8 +43,11 @@
     color: #F9F9F9;
 }
 
-.custom-button.direct {
-    background-color: #6C5FBC;
-    color: #F9F9F9;
+.custom-button.direct:hover {
+    background-color: #F9F9F9;
+    color: #6C5FBC;
+    svg path {
+        stroke: #6C5FBC;
+    }
 }
 
