--- a/src/entities/dashboard/item/ui/styles.module.css
+++ b/src/entities/dashboard/item/ui/styles.module.css
@@ -6,18 +6,15 @@
     height: 90px;
     background-color: #FFFFFF;
     border-radius: 15px;
+    transition: all .3s;
 }
 
-.dashboard__wrapper_shadow {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 345px;
-    height: 90px;
-    background-color: #FFFFFF;
-    border-radius: 15px;
+.dashboard__wrapper:hover {
+    transform: scale(1.02);
+    cursor: pointer;
     box-shadow: 10px 10px 20px 0 #eae9e9;
 }
+
 
 .dashboard__image {
     width: 70px;
