--- a/src/entities/recipe/item/ui/styles.module.css
+++ b/src/entities/recipe/item/ui/styles.module.css
@@ -42,10 +42,8 @@
 }
 
 .recipe__label {
-    display: inline-block;
     text-align: center;
-    padding: 6px 5px 0 5px;
-    height: 25px;
+    padding: 10px 6px ;
     background-color: #F7EDD0;
     color: #DAA31A;
     font-family: Poppins-Regular, sans-serif;
