--- a/src/entities/recipe/item/ui/styles.module.css
+++ b/src/entities/recipe/item/ui/styles.module.css
@@ -17,18 +17,18 @@
 
 .recipe__image {
     transition: all .5s;
+    border-radius: 30px 30px 0 0;
+    width: 395px;
+    height: 175px;
+    object-fit: cover;
 
-    img {
-        border-radius: 30px 30px 0 0;
-        width: 395px;
-        height: 175px;
-    }
 }
 
 .recipe__wrapper:hover {
      .recipe__image {
-         transform: scaleY(.8) translateY(-26px);
+        transform: scaleY(.83) translateY(-18px);
      }
+
     .recipe__bookmark {
         cursor: pointer;
         opacity: 1;
