--- a/src/widgets/enjoyBanner/ui/enjoyBlock/styles.module.css
+++ b/src/widgets/enjoyBanner/ui/enjoyBlock/styles.module.css
@@ -7,7 +7,6 @@
     height: 430px;
 }
 
-
 .enjoyBlock__subtitle {
     margin-bottom: 50px;
     line-height: 28px;
@@ -17,7 +16,9 @@
     width: 490px;
     color: #676767;
     letter-spacing: 0;
+
     span {
+        cursor: pointer;
         color: #6155AE;
     }
 }
